# engine

./: .gitignore  CMakeLists.txt  README.md  compile.bat  compile_shaders.bat
shaders/source/compute/: gradient.comp  gradient_color.comp
shaders/source/fragment/: mesh.frag  tex_image.frag
shaders/source/include/: input_structures.glsl
shaders/source/vertex/: colored_triangle.vert  colored_triangle_mesh.vert  first.vert  mesh.vert
src/: camera.cpp  camera.h  engine.cpp  engine.h  event_queue.h  game.h  input_handler.cpp  input_handler.h  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_engine_1_0.cpp  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
